<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/small_gap"
    tools:context=".MainActivity">

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi"
        android:textColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_gap"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/medium_gap">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium_gap">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/weight_edit_text"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="70"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/text_hint"
                    android:textSize="40dp"></EditText>

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kg"
                    android:textColor="@color/white"
                    android:textSize="30dp" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_gap"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/medium_gap">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium_gap">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/height_edit_text"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="180"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/text_hint"
                    android:textSize="40dp"></EditText>

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cm"
                    android:textColor="@color/white"
                    android:textSize="30dp" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_gap"
        android:backgroundTint="@color/btn_background"
        android:text="@string/calculate"
        android:textSize="15dp"
        app:cardCornerRadius="@dimen/medium_gap">

    </Button>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_gap"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/medium_gap">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium_gap">

            <TextView
                android:id="@+id/bmi_text_view"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_21_58"
                android:textColor="@color/white"
                android:textSize="40dp" />

            <TextView
                android:id="@+id/health_text_view"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/healthy"
                android:textColor="@color/normal_weight" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/normal_range_is_18_5_24_9"
                android:textColor="@color/text_hint"
                android:textSize="15dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>